--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -1,5 +1,5 @@
 html{background: #fff;}
-body{font-size:14px;line-height: 24px;box-shadow: 0 0 1px rgba(0,0,0,.5);}
+body{font-size:14px;/*box-shadow: 0 0 1px rgba(0,0,0,.5);*/}
 p{font-size:14px;line-height: 24px;}
 .jusitify{text-align: justify;word-break: break-all;}
 .z_top_title{line-height:36px;height:36px;}
@@ -36,3 +36,25 @@ p{font-size:14px;line-height: 24px;}
 .z_tab_con{width:100%;overflow:hidden;}
 .z_tab_con section{float:left;width:50%;}
 .z_tab_box{width:200%;position:relative;left:0;transition:all .6s ease;}
+.photo_album .p_title,.photo_type{height:.92rem;line-height: .92rem;color:#808080;}
+.p_title i,.photo_type i{color:#2baa3f;margin-right: .2rem;font-size:.3rem;}
+.photo_type i{color:#000;}
+.photo_type span{margin-left:.3rem;}
+.photo_album .photo_list{overflow: hidden;padding:.1rem 0;}
+.photo_list ul{overflow:hidden;}
+.photo_album  li{float:left;width:1.9rem;height:1.9rem;overflow: hidden;border-radius: .2rem;margin-left:.3rem;margin-bottom:.3rem;}
+.photo_album  li img{width:100%;height:100%;display: block;}
+.b-hy .hid_wid{width:.9rem;overflow: hidden;padding:0;}
+.b-hy select{overflow: scroll;border:none;width:1.2rem;padding:0;margin:0;margin-left:-4px;}
+.b-gs textarea{border-radius: .1rem;height:1.8rem;width:100%;border:1px #e5e5e5 solid;}
+.tabcon .b-gs div{width: 100%;}
+.tabcon .zt_text{display: inline-block;width:95%;}
+.addpoto{line-height:1.9rem;text-align:center;position:absolute;width:100%;}
+.addpoto i{color:#7a7d82;font-size: .5rem;}
+.uploadfile{position:relative;width:100%;height:100%;}
+.type_file{position:absolute;width:1rem;height:.6rem;top:50%;left:50%;margin-top:-.3rem;margin-left:-.5rem;opacity: 0;cursor: pointer;}
+.photo_list h3.poto_tips{font-size: .24rem;color:#9ba4ad;}
+.tabcon input, .tabcon textarea, .tabcon select{line-height: inherit;}
+.zt_tab_con ul li{padding:.3rem 0 .2rem;}
+.r_more{float:right;margin-top:.13rem;font-size:.3rem;}
+.infototal li{width:33%;}
