--- a/webroot/mobile/font/iconfont.css
+++ b/webroot/mobile/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1473387108'); /* IE9*/
-  src: url('iconfont.eot?t=1473387108#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1473387108') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1473387108') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1473387108#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1474182387'); /* IE9*/
+  src: url('iconfont.eot?t=1474182387#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1474182387') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1474182387') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1474182387#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -24,6 +24,7 @@
 .icon-add:before { content: "\e658"; }
 .icon-duanxin:before { content: "\e672"; }
 .icon-android:before { content: "\e659"; }
+.icon-jiahao:before { content: "\e692"; }
 .icon-gengduo:before { content: "\e64f"; }
 .icon-ren:before { content: "\e66a"; }
 .icon-fenxiang:before { content: "\e66c"; }
