--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -1,5 +1,5 @@
 /*reset css*/
-html, body, div,iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font: inherit; vertical-align: baseline; }
+html, body, div,iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0;font: inherit; vertical-align: baseline; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {margin:0;padding:0;}
 html{background:#f0eff5;}
 ol, ul{ list-style: none; }
@@ -20,6 +20,7 @@ p{background-color: transparent;word-break: break-all;font-size:.3rem;line-heigh
 a,button,input{-webkit-tap-highlight-color:rgba(255,0,0,0);border:none;background: none;}
 input[type='text'],textarea{-webkit-appearance: none;}/*iphone内阴影*/
 textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
+table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 /*reset css end*/
 /*common css*/
 .fl { float:left; display: inline; }
