--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -108,7 +108,7 @@ table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 .wraper .h-info-box .lh4{line-height:0.4rem;}
 .wraper .nopr{padding-right:0;}
 .wraper .nopd{padding-bottom:0;}
-.wraper .color-items{color:#e01a48;}
+.wraper .color-items{color:#b71c2d;}
 .wraper .color-gray{color:#7A7E83;}
 .loading{width:1.27rem;height:0.31rem;background: url(img/loading.gif) center center; background-size:cover; margin:0 auto;}
 .loadingbox{width:100%;height:0.31rem;margin:0.2rem 0;font-size:0.28rem;color:#c8cbce;text-align: center;}
@@ -168,7 +168,7 @@ footer .othertype a,.wxlogin .othertype a{display:block;width:0.7rem;height:0.57
 footer .othertype img,.wxlogin .othertype img{width:100%;height:auto;display:block;}
 .navfooter .active span,.navfooter .active a{color:#db1f4f;}
 .pd10{padding-bottom:1rem;padding-top:0;}
-.wraper .colore01{color:#e01a48;}
+.wraper .colore01{color:#b71c2d;}
 /*animate css*/
 /*moveup*/
 @-webkit-keyframes moveup {from { }to { -webkit-transform: translateY(-100px);transform: translateY(-100px);}}
