--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -154,7 +154,7 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; }
                                          */
                     
 /*header*/
-header{width:100%;height:0.8rem;position:relative;left:0;top:0;background:#dd204b;border-bottom:1px #a8a7ab solid;overflow:hidden;z-index:999;}
+header{width:100%;height:0.8rem;position:relative;left:0;top:0;background:#b71c2d;border-bottom:1px #a8a7ab solid;overflow:hidden;z-index:999;}
 header h1{width:100%;text-align:center;line-height:0.8rem;font-size:0.32rem;color:#fff;font-weight:500;}
 header a{ font-size:0.28rem; color:#fff;}
 header .toback{position:absolute;left:0;top:0.2rem;background: url(img/icon1.png) no-repeat;background-size:cover;width:0.17rem;height:0.29rem;}
