--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -206,7 +206,7 @@ color:#7a7d82;font-size:.24rem;}
 .etrol_con_des .infor-comm{padding-left:.8rem;width:100%;}
 .comm-info span:first-child{width:0.62rem;height:0.62rem;margin-right:0.3rem;}
 .comm-info span:last-child{float:right;margin-top:0.14rem;position:relative;padding-top:0.2rem;cursor: pointer;}
-.comm-info span .addnum{position:absolute;top:-0.1rem;left:0;width:0.3rem;height;0.3rem;padding-top:0.1rem;display: none;color:#da2051;font-size:0.28rem;font-weight: bold;}
+.comm-info span .addnum{position:absolute;top:-0.1rem;left:0;width:0.3rem;height;0.3rem;padding-top:0.1rem;display: none;color:#b71c2d;font-size:0.28rem;font-weight: bold;}
 .comm-info span .show{ display: block;-webkit-animation: ani_addnum 2s; opacity: 0;}
 /*+1*/
 @-webkit-keyframes ani_addnum{
@@ -331,7 +331,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .a-shadow textarea{border:1px #c8c7cc solid;width:90%;border-radius: 0.1rem;height:1.8rem;padding:0.1rem;font-size:0.28rem;}
 .a-shadow li:last-child{justify-content: space-between;margin:0.33rem;margin-bottom:0;}
 .a-shadow li a{display:iinline-block;width:3.38rem;height:0.84rem;background: #7a7e83;line-height: 0.84rem;font-size:0.28rem;text-align: center;color:#fff;border-radius: 0.2rem;box-shadow: 0 0 0.05rem rgba(0,0,0,.4);}
-.a-shadow li a:last-of-type{background: #e01a48;}
+.a-shadow li a:last-of-type{background: #b71c2d;}
 .a-forword{padding:0.53rem 0;}
 .a-forword h3{width:100%;font-size:0.26rem;text-align: center;line-height: 0.44rem;color:#222c38;margin-bottom:0.64rem;}
 .a-forword .forword{display: flex; justify-content: space-between;height:2.06rem;align-items: center;padding:0 1.52rem;}
