--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -3,10 +3,10 @@ body{font-size:14px;/*box-shadow: 0 0 1px rgba(0,0,0,.5);*/}
 p{font-size:14px;line-height: 24px;}
 .jusitify{text-align: justify;word-break: break-all;}
 .z_top_title{line-height:36px;height:36px;}
-.z_top_title h3{font-size:16px;}
+.z_top_title h3{font-size:15px;}
 .z_top_title span{font-size:13px;cursor: pointer;}
 .z_top_con{}
-.z_top_con p{font-size:14px;line-height: 20px;color:#7A7E83;text-align: justify;word-break: break-all;}
+.z_top_con p{font-size:14px;line-height: 18px;color:#7A7E83;text-align: justify;word-break: break-all;}
 .z_top10{line-height: 40px;height:42px;}
 .z_items{padding-bottom:.2rem;}
 .z_items dl{float:left;width:3.35rem;overflow:hidden;margin-right:.2rem;margin-top:.3rem;}
@@ -15,9 +15,9 @@ p{font-size:14px;line-height: 24px;}
 .z_items{overflow: hidden;}
 .z_items .zt_name{line-height: 20px;margin-top:.2rem;}
 .z_items .p_name{font-size:15px;}
-.zt_commpany{font-size:13px;line-height: 20px;}
+.zt_commpany{font-size:13px;line-height: 16px;}
 .p_job{font-size:13px;}
-.zt_num{font-size:15px;font-weight: 400;}
+.zt_num{font-size:15px;font-weight: 400;line-height: 24px;}
 .zt_r_btn{width:60px;height:24px;background: #e01a48;color:#fff;text-align: center;margin-right:.3rem;line-height: 24px;}
 .posi_top{position: relative;}
 .posi_top span{position: absolute;top:0;left:0;width:0;height:0;border-top:26px #e01a48 solid;border-left:26px #e01a48 solid;border-right:26px solid transparent;border-bottom:26px solid transparent;}
@@ -46,8 +46,8 @@ p{font-size:14px;line-height: 24px;}
 .photo_album  li{float:left;width:1.9rem;height:1.9rem;overflow: hidden;border-radius: .2rem;margin-left:.3rem;margin-bottom:.3rem;}
 .photo_album  li img{width:100%;height:100%;display: block;}
 .b-hy .hid_wid{width:.9rem;overflow: hidden;padding:0;}
-.b-hy select{overflow: scroll;border:none;width:1.2rem;padding:0;margin:0;margin-left:-4px;}
-.b-gs textarea{border-radius: .1rem;height:1.8rem;width:100%;border:1px #e5e5e5 solid;}
+.b-hy select{overflow: scroll;border:none;width:1.4rem;padding:0;margin:0;}
+.b-gs textarea{border-radius: .1rem;height:1.8rem;width:100%;border:1px #e5e5e5 solid;padding:.1rem;}
 .tabcon .b-gs div{width: 100%;}
 .tabcon .zt_text{display: inline-block;width:95%;}
 .addpoto{line-height:1.9rem;text-align:center;position:absolute;width:100%;}
@@ -55,7 +55,8 @@ p{font-size:14px;line-height: 24px;}
 .uploadfile{position:relative;width:100%;height:100%;}
 .type_file{position:absolute;width:1rem;height:.6rem;top:50%;left:50%;margin-top:-.3rem;margin-left:-.5rem;opacity: 0;cursor: pointer;}
 .photo_list h3.poto_tips{font-size: .24rem;color:#9ba4ad;}
-.tabcon input, .tabcon textarea, .tabcon select{line-height: inherit;}
+.tabcon input, .tabcon textarea, .tabcon select{/*line-height: inherit;*/background: pink;}
 .zt_tab_con ul li{padding:.3rem 0 .2rem;}
 .r_more{float:right;margin-top:.13rem;font-size:.3rem;}
 .infototal li{width:33%;}
+.zt_tab_con ul span{vertical-align: middle;}
