--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -59,4 +59,4 @@ p{font-size:14px;line-height: 24px;}
 .zt_tab_con ul li{padding:.3rem 0 .2rem;}
 .r_more{float:right;margin-top:.13rem;font-size:.3rem;}
 .infototal li{width:33%;}
-.zt_tab_con ul span{vertical-align: middle;}
+.zt_tab_con ul span{}
