--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -45,8 +45,8 @@ p{font-size:14px;line-height: 24px;}
 .photo_list ul{overflow:hidden;}
 .photo_album  li{float:left;width:1.9rem;height:1.9rem;overflow: hidden;border-radius: .2rem;margin-left:.3rem;margin-bottom:.3rem;}
 .photo_album  li img{width:100%;height:100%;display: block;}
-.b-hy .hid_wid{width:.9rem;overflow: hidden;padding:0;}
-.b-hy select{overflow: scroll;border:none;width:1.4rem;padding:0;margin:0;}
+.b-hy .hid_wid{width:100%;padding:0;}
+.b-hy select{overflow: scroll;border:none;width:150%;padding:0;margin:0;}
 .b-gs textarea{border-radius: .1rem;height:1.8rem;width:100%;border:1px #e5e5e5 solid;padding:.1rem;}
 .tabcon .b-gs div{width: 100%;}
 .tabcon .zt_text{display: inline-block;width:95%;}
@@ -55,8 +55,13 @@ p{font-size:14px;line-height: 24px;}
 .uploadfile{position:relative;width:100%;height:100%;}
 .type_file{position:absolute;width:1rem;height:.6rem;top:50%;left:50%;margin-top:-.3rem;margin-left:-.5rem;opacity: 0;cursor: pointer;}
 .photo_list h3.poto_tips{font-size: .24rem;color:#9ba4ad;}
-.tabcon input, .tabcon textarea, .tabcon select{line-height: inherit;/*background: pink;*/}
-.zt_tab_con ul li{padding:.3rem 0 .2rem;}
-.r_more{float:right;margin-top:.13rem;font-size:.3rem;}
+.tabcon input, .tabcon textarea, .tabcon select{/*line-height: inherit;background: pink;*/}
+.zt_tab_con ul li{padding:.3rem 0 ;}
+.r_more{font-size:.3rem;position:absolute;right:.3rem;top:0.1rem;}
+.r_potion{position:relative;}
 .infototal li{width:33%;}
-.zt_tab_con ul span{}
+.zt_tab_con ul span{vertical-align: baseline;}
+.zt_tab_con ul .zt_self{vertical-align: top;margin-top:.05rem;}
+.zt_tab_con div{width:70%;}
+.zt_tab_con div em{width:95%;}
+.zt_tab_con div input{width:100%;}
