--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -9,17 +9,18 @@ p{font-size:14px;line-height: 24px;}
 .z_top_con p{font-size:14px;line-height: 18px;color:#7A7E83;text-align: justify;word-break: break-all;}
 .z_top10{line-height: 40px;height:42px;}
 .z_items{padding-bottom:.2rem;}
-.z_items dl{float:left;width:3.35rem;overflow:hidden;margin-right:.2rem;margin-top:.3rem;}
+.z_items dl{float:left;width:3.35rem;overflow:hidden;margin-right:.2rem;margin-top:.3rem;background: #f9f9f9;}
 .z_items dl:nth-of-type(2n){margin-right:0;}
 .z_items dl img{width:auto;height:4rem;display: block;}
 .z_items{overflow: hidden;}
 .z_items .zt_name{line-height: 20px;margin-top:.2rem;}
 .z_items .p_name{font-size:15px;}
-.zt_commpany{font-size:13px;line-height: 16px;}
+.zt_commpany{font-size:13px;line-height: 16px;height:18px;}
 .p_job{font-size:13px;}
 .zt_num{font-size:15px;font-weight: 400;line-height: 24px;}
 .zt_r_btn{width:60px;height:24px;background: #e01a48;color:#fff;text-align: center;margin-right:.3rem;line-height: 24px;}
-.posi_top{position: relative;}
+.bggray {background: #7a7e83;}
+.posi_top{position: relative;max-height:4rem;max-width:100%;overflow:hidden;}
 .posi_top span{position: absolute;top:0;left:0;width:0;height:0;border-top:26px #e01a48 solid;border-left:26px #e01a48 solid;border-right:26px solid transparent;border-bottom:26px solid transparent;}
 .posi_top  i{position: absolute;top:5px;left:4px;color:#fff;font-size: 13px;font-weight: bold;}
 .zt_tips{display:none;max-height:0;z-index:10000;width:0;background: #fff;border-radius: 6px;position: fixed;top:5%;left:50%;margin-left:-40%;box-shadow: 0 0 1px rgba(0,0,0,.5);-webkit-transition:width 5s ease;transition:width 5s ease-in-out;}
@@ -44,9 +45,9 @@ p{font-size:14px;line-height: 24px;}
 .photo_album .photo_list{overflow: hidden;padding:.1rem 0;}
 .photo_list ul{overflow:hidden;}
 .photo_album  li{float:left;width:1.9rem;height:1.9rem;overflow: hidden;border-radius: .2rem;margin-left:.3rem;margin-bottom:.3rem;}
-.photo_album  li img{width:100%;height:100%;display: block;}
-.b-hy .hid_wid{width:100%;padding:0;}
-.b-hy select{overflow: scroll;border:none;width:150%;padding:0;margin:0;}
+.photo_album  li img{width:100%;height:auto;display: block;}
+.b-hy .hid_wid{width:100%;}
+.b-hy select{border:none;width:150%;vertical-align: middle;}
 .b-gs textarea{border-radius: .1rem;height:1.8rem;width:100%;border:1px #e5e5e5 solid;padding:.1rem;}
 .tabcon .b-gs div{width: 100%;}
 .tabcon .zt_text{display: inline-block;width:95%;}
@@ -54,14 +55,15 @@ p{font-size:14px;line-height: 24px;}
 .addpoto i{color:#7a7d82;font-size: .5rem;}
 .uploadfile{position:relative;width:100%;height:100%;}
 .type_file{position:absolute;width:1rem;height:.6rem;top:50%;left:50%;margin-top:-.3rem;margin-left:-.5rem;opacity: 0;cursor: pointer;}
-.photo_list h3.poto_tips{font-size: .24rem;color:#9ba4ad;}
+.photo_list h3.poto_tips{font-size: .26rem;color:#9ba4ad;line-height: .4rem;}
 .tabcon input, .tabcon textarea, .tabcon select{/*line-height: inherit;background: pink;*/}
 .zt_tab_con ul li{padding:.3rem 0 ;}
-.r_more{font-size:.3rem;position:absolute;right:.3rem;top:0.06rem;}
-.r_potion{position:relative;}
+.r_more{font-size:.3rem;position:absolute;right:.3rem;top:.16rem;}
+.zt_tab_con .r_potion{position:relative;line-height: normal;}
 .infototal li{width:33%;}
 .zt_tab_con ul span{vertical-align: baseline;}
 .zt_tab_con ul .zt_self{vertical-align: top;margin-top:.05rem;}
 .zt_tab_con div{width:70%;}
 .zt_tab_con div em{width:95%;}
 .zt_tab_con div input{width:100%;}
+.zt_tab_con .b-hy{margin-top:0;}
