--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -63,6 +63,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .nextstep,.s-btn{ display:block;text-align:center;height:0.78rem;width:80%;font-size:0.3rem;line-height:0.78rem;background: #b71c2d;color:#fff;margin:0 auto;margin-top:0.4rem;margin-bottom:0.4rem;border-radius:0.2rem;}
 .f-bottom{position: fixed;width: 100%;height: 1rem;bottom: 0;border-radius: 0;color: #fff;
     font-size: 0.32rem;text-align: center;line-height: 1rem;background: #b71c2d;max-width: 750px;}
+.submited{background: #7A7E83;}
 .s-btn{margin:0.2rem auto;}
 .redshadow{box-shadow: 0 0.1rem 0.2rem rgba(224,26,72,.2);}
 .grayshadow{box-shadow: 0 0.1rem 0.2rem rgba(122,126,131,.2);}
