--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -88,6 +88,8 @@ table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 .wraper .col_r{color:#ff1e84;}
 .wraper .col_b{color:#009eff;}
 .wraper .col_g{color:#00bc6f;}
+.wraper .col_p{color:#ff8897;}
+.wraper .col_t{color:#60bcff;}
 .wraper .col_darkblue{color:#2b4660;}
 .wraper .col_yellow{color:#f19715;}
 .wraper .bgff{background: #fff;}
