--- a/webroot/mobile/css/zt.css
+++ b/webroot/mobile/css/zt.css
@@ -70,3 +70,4 @@ p{font-size:14px;line-height: 24px;}
 .zt_tab_con div em{width:95%;}
 .zt_tab_con div input{width:100%;}
 .zt_tab_con .b-hy{margin-top:0;}
+.basicon .b-gs .col_t{color:#60bcff;}
