--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -795,7 +795,7 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .m-commond-list span i{margin-right: .2rem;font-size: .26rem;}
 .m-commond-list .hover{color:#e01b49;}
 .m-commond-list p{padding-top:.26rem;padding-left: .6rem;}
-.m-commond-list p img{margin-right: .1rem;width: .42rem;height: .42rem;border-radius: 50%;}
+.m-commond-list p img{width: .42rem;height: .42rem;border-radius: 50%;}
 /*个人主页*/
 .h-info-box,.book-info-box{background: #fff;border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid; padding:0 0.3rem;}
 .max_width{margin-bottom:.2rem;}
